# CeCe-gui

./: .gitmodules  .travis.yml  CMakeLists.txt  MainWindow.cpp  PlotWidget.hpp  README.md  appveyor.yml
resources/: descriptor.json.in  version.rc
src/: AboutDialog.ui  LogStream.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Simulator.cpp  StdOutStream.cpp  StdOutStream.hpp  main.cpp  version.hpp.in
